eliminate the tedious works of handling communications errors and 
parsing JSON results.

Android and Python Desktop application developers can access 
remote SQL databases and/or SQL databases in the cloud by simply 
including standard JDBC calls in their code, just like 
they would for a local database.

The AceQL Python Client SDK is licensed under the Apache 2.0
License.


AceQL Python Client SDK - Version 5.0.1 - 02-Sep-2021
-----------------------------------------------------

What's New
- Cursor.executemany is now supported in order to
  allow fast INSERT and UPDATE calls.


AceQL Python Client SDK - Version 4.2.2 - 02-Aug-2021
-----------------------------------------------------

Bugs fixed:
- Remove some unnecessary debug calls.


AceQL Python Client SDK - Version 4.2.1 - 20-Jul-2021
-----------------------------------------------------

Bugs fixed:
- "connection" label was not passed correctly in
  underlying URLs.
  This could cause trouble with future AceQL Server
  versions.


AceQL Python Client SDK - Version 4.2 - 10-Jun-2021
---------------------------------------------------

What's New
- Cursor.mogrify DB API extension has been added.
  See https://www.psycopg.org/docs/cursor.html#cursor.mogrify

Bugs fixed:
- Some documentation glitches have been fixed.
- The Python 2 U notation has been removed from samples.


AceQL Python Client SDK - Version 4.1 - 04-May-2021
----------------------------------------------------

What's New:
- The Connection constructor allows now to pass only an URL
  parameter that will contain in the query string the username,
  the password and database values:
  https://www.acme.com/acel?username=my_name&password=my_passwd&database=my_db


AceQL Python Client SDK - Version 4.0 - 14-Apr-2021
----------------------------------------------------

What's New:
- The SDK supports now Python 3.9.
- Type checks have been added to all public methods.
- The new ConnectionOptions class is now used to pass